--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -15,7 +15,7 @@
 }
 
 .home-main{
-background-image: url('../../assets/background.jpeg');
+    background: #c9d7e8;
 background-repeat: no-repeat;
 background-size: cover;
 width: 100vw;
