--- a/src/components/swipper/swiper.css
+++ b/src/components/swipper/swiper.css
@@ -6,6 +6,11 @@
     border-radius: 12px;
 }
 .slider{
-    border: 1px solid #fff;
+    border: 1px solid gold;
     border-radius: 12px;
+}
+.with-logo{
+    object-fit: cover;
+    background-color: #fff;
+    background-position: center;
 }
