--- a/src/components/comrades/comrades.css
+++ b/src/components/comrades/comrades.css
@@ -5,9 +5,12 @@
   align-items: center;
 }
 .comrades-card-img img{
+  padding: 20px;
   object-fit: cover;
   background-position: center;
-  width: 250px;
+
+width: 100%; 
+ height: 300px;
 }
 
 .comrades-card-menu h2 {
@@ -15,8 +18,10 @@
 }
 
 .comrades-card{
-  width: 250px;
-  background-color:gold;
+  width: 290px;
+  height: 440px;
+  background-color:#c9d7e8;
+  border: 2px solid rgb(0, 0, 0);
 }
 
 .brend_name {
@@ -32,6 +37,9 @@
 
 .card_con {
   padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .comrades-basket {
@@ -42,8 +50,8 @@
   align-items: center;
   justify-content: center;
   gap: 15px;
-  background-color: black;
   border: none;
+  background-color: inherit;
   border-radius: 5px;
   color: white;
   font-size: 20px;
