--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -32,7 +32,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(33, 33, 33);
+    background: #000;
     width: 100%;
     height: 400px;
   
