--- a/src/Styles/Banner.css
+++ b/src/Styles/Banner.css
@@ -1,4 +1,79 @@
-.banner img{
+@import url(https://fonts.googleapis.com/css?family=Comfortaa:300,regular,500,600,700);
+
+.banner{
     width:100%;
     height: 660px;
+    background-size: cover;
+    background-image: url('../Images/Header.png');
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.title h1{
+    color: #000;
+text-align: center;
+font-family: 'Comfortaa',sans-serif;
+font-size: 45px;
+font-style: normal;
+font-weight: 400;
+letter-spacing: 3px;
+}
+.title p{
+    color: #000;
+    text-align: center;
+    font-family: 'Comfortaa',sans-serif;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 3px;
+}
+.title h1::selection{
+    color: #BC955D;
+    background-color: #000;
+}
+.title p::selection{
+    color: #BC955D;
+    background-color: #000;
+}
+.title{
+    padding: 30px;
+    width: 100%;
+    background-color: #fff9;
+}
+.border{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 325px;
+    border: 1px solid #000;
+
+}
+
+@media screen and (max-width:900px) {
+    .title h1{
+    font-size: 25px;
+    }
+    .title p{
+        font-size: 15px;
+    }
+
+}
+@media screen and (max-width:450px) {
+    .title h1{
+    font-size: 15px;
+    }
+    .title p{
+        font-size: 10px;
+    }
+
+}
+@media screen and (max-width:340px) {
+    .title h1{
+    font-size: 10px;
+    }
+    .title p{
+        font-size: 5px;
+    }
+
 }
