--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -24,3 +24,15 @@ font-weight: 400;
 .header-links ::selection{
     background-color: #BC955D;
 }
+.responsive-menu{
+    display: none
+}
+
+@media screen and (max-width:720px) {
+    .responsive-menu{
+        display: flex;
+    }
+    .header-links{
+        display: none;
+    }
+}
