--- a/src/Styles/Banner.css
+++ b/src/Styles/Banner.css
@@ -36,6 +36,7 @@ letter-spacing: 3px;
     background-color: #000;
 }
 .title{
+    backdrop-filter: blur(5px);
     padding: 30px;
     width: 100%;
     background-color: #fff9;
