--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -101,16 +101,17 @@ font-weight: 400;
 .inputs button:active{
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2) inset;
 }
-.user-locations{
-    display: flex;
-    flex-direction: column;
-}
+
 .all-footer{
     display: flex;
     justify-content: space-between;
 }
 .locatsion iframe{
+    width: 600px;
     border: 2px solid #BC955D;
+}
+.locatsion{
+    width: 100%;
 }
 .contacts h1{
     margin-top: 40px;
@@ -158,8 +159,55 @@ font-style: normal;
 font-weight: 400;
 }
 .contacts{
-    width: 380px;
+   width: auto;
 }
-.user-locations{
-    width: 540px;
+
+
+@media screen and (max-width:1150px) {
+    .all-footer{
+        display: flex;
+        gap: 50px;
+        flex-direction: column;
+    }
+    .locatsion iframe{
+        width: 530px;
+    }
 }
+@media screen and (max-width:600px) {
+        .input1 input{
+            width: 200px;
+        }
+        .input2 input{
+            width: 200px;
+        }
+        .input3 textarea{
+            width: 430px;
+        }
+        .inputs button{
+            width: 430px;
+        }
+        .locatsion iframe{
+            width: 430px;
+        }
+}
+@media screen and (max-width:470px) {
+        .input1 input{
+            width: 100%;
+        }
+        .input2 input{
+            width: 100%;
+        }
+        .input3 textarea{
+            width: 100%;
+        }
+        .inputs button{
+            width: 100%;
+        }
+        .locatsion iframe{
+            width: 100%;
+        }
+        .input-bag{
+            display: flex;
+            flex-direction: column;
+        }
+    }
