--- a/src/Styles/Main.css
+++ b/src/Styles/Main.css
@@ -11,7 +11,13 @@
 /*Katalog*/
 .katalog img{
     width: 100%;
-    height: 35px;
+    height: 25px;
+}
+.left-line{
+    width: 100%;
+    height: 2px;
+    background-color: #BC955D;
+    display: none;
 }
 
 
@@ -25,6 +31,7 @@ font-weight: 400;
 line-height: 43.2px; /* 120% */
 }
 .katalog{
+    align-items: center;
     margin:55px 0;
     padding: 0 15px;
     display: flex;
@@ -38,7 +45,7 @@ line-height: 43.2px; /* 120% */
     transition: all.3s ease-in-out;
 }
 .product:hover{
-    box-shadow:  0 0  20px #fff;
+    box-shadow:  0 0  20px #ffffff7e;
 }
 .product img{
     transition: 0.3s all ease;
@@ -69,6 +76,7 @@ font-weight: 400;
     align-items: center;
     width: 100%;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 
@@ -115,4 +123,52 @@ font-weight: 400;
 }
 #closeModalBtn:hover{
     transform: rotate(180deg) scaleY(0.85);
+}
+.tab-list{
+    display: flex;
+    border-bottom: none;
+}
+
+
+@media screen and (max-width:1420px) {
+    .katalog img{
+        width: 40%;
+    }
+}
+
+@media screen and (max-width:830px) {
+    .tab-list{
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+@media screen and (max-width:1000px) {
+    .katalog img{
+        width: 30%;
+    }
+    .katalog{
+        display: flex;
+        justify-content: center;
+    }
+}
+@media screen and (max-width:500px) {
+    .katalog h2{
+        font-size: 25px;
+    }
+}
+@media screen and (max-width:500px) {
+    .katalog h2{
+        font-size: 25px;
+    }
+}
+@media screen and (max-width:380px) {
+    .katalog h2{
+        font-size: 15px;
+    }
+    .katalog img{
+        display: none;
+    }
+    .left-line{
+        display: flex;
+    }
 }
