--- a/src/Styles/News.css
+++ b/src/Styles/News.css
@@ -2,11 +2,12 @@
 
 .news-block{
     width: 100%;
-    height: 400px;
+    height: auto;
     background-color: #fff;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    padding: 20px;
 }
 
 .news-title h2{
@@ -21,6 +22,23 @@
 font-family: 'Comfortaa',sans-serif;
 font-size: 16px;
 font-style: normal;
-width: 70%;
 font-weight: 400;
+}
+
+@media screen and (max-width:790px) {
+    .news-block{
+        text-align: center;
+        flex-direction: column;
+    }
+    .news-title{
+        text-align: center;
+    }
+}
+@media screen and (max-width:500px) {
+   .news-title h2{
+    font-size: 20px;
+   }
+   .news-title h3{
+    font-size: 10px;
+   }
 }
