--- a/src/Styles/News.css
+++ b/src/Styles/News.css
@@ -4,6 +4,8 @@
     width: 100%;
     height: auto;
     background-color: #fff;
+    box-shadow: 0 0 20px #0005;
+    margin: 20px 0;
     display: flex;
     align-items: center;
     justify-content: space-around;
