--- a/src/Styles/Main.css
+++ b/src/Styles/Main.css
@@ -106,7 +106,8 @@ font-weight: 400;
     left: 50%;
     top: 50%;
     transform: scaleY(0) translate(-50%,-50%);
-
+    width: 80%;
+    height: 50%;
     background: #fff;
     border-radius: 10px;
     box-shadow: 0 0 30px #000;
@@ -114,7 +115,8 @@ font-weight: 400;
 }
 #modal .window #modal_img{
     display: block;
-    width: 2000px;
+    width: 100%;
+    height: 100%;
     transition: 0.3s transform ease;
 }
 #closeModalBtn{
@@ -177,5 +179,14 @@ font-weight: 400;
     }
     .left-line{
         display: flex;
+    }
+}
+
+@media screen and (max-width:500px) {
+    #modal .window{
+        width: 100%;
+    }
+    #modal{
+        padding: 0 10px;
     }
 }
