--- a/src/Styles/Main.css
+++ b/src/Styles/Main.css
@@ -73,7 +73,7 @@ font-weight: 400;
     align-items: center;
     justify-content: end;
     padding-right:10px;
-    background: rgb(149, 117, 74);
+    background: #95754a;
     position: relative;
     z-index: 100;
 
