--- a/src/Styles/Main.css
+++ b/src/Styles/Main.css
@@ -97,6 +97,7 @@ font-weight: 400;
     width: 100%;
     height: 100%;
     background: #0009;
+    backdrop-filter: blur(15px);
     transform: scale(0);
 }
 #modal .window{
