--- a/src/Styles/Banner.css
+++ b/src/Styles/Banner.css
@@ -4,7 +4,8 @@
     width:100%;
     height: 660px;
     background-size: cover;
-    background-image: url('../Images/Header.png');
+    background-position: center;
+    background-image: url('https://i.ytimg.com/vi/wwmiH8uDxSc/maxresdefault.jpg');
     display: flex;
     align-items: center;
     justify-content: center;
