--- a/src/Styles/Main.css
+++ b/src/Styles/Main.css
@@ -1,13 +1,14 @@
 @import url(https://fonts.googleapis.com/css?family=Comfortaa:300,regular,500,600,700);
 
-.background{
+.background {
     width: 100%;
     height: auto;
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url('../Images/background.jpeg');
 }
-.full-bg-catalog{
+
+.full-bg-catalog {
     width: 100%;
     height: auto;
     background-repeat: no-repeat;
@@ -16,11 +17,12 @@
 }
 
 /*Katalog*/
-.katalog img{
+.katalog img {
     width: 100%;
     height: 25px;
 }
-.left-line{
+
+.left-line {
     width: 100%;
     height: 2px;
     background-color: #BC955D;
@@ -28,57 +30,66 @@
 }
 
 
-.katalog h2{
+.katalog h2 {
     color: #BC955D;
-text-align: center;
-font-family: 'Comfortaa',sans-serif;
-font-size: 36px;
-font-style: normal;
-font-weight: 400;
-line-height: 43.2px; /* 120% */
+    text-align: center;
+    font-family: 'Comfortaa', sans-serif;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 43.2px;
+    /* 120% */
 }
-.katalog{
+
+.katalog {
     align-items: center;
 
     padding: 55px 15px;
     display: flex;
     gap: 20px;
 }
-.product{
+
+.product {
     margin-left: 30px;
     margin-top: 100px;
-    width:350px;
+    width: 350px;
     overflow: hidden;
     transition: all.3s ease-in-out;
 }
-.product:hover{
-    box-shadow:  0 0  20px #ffffff7e;
+
+.product:hover {
+    box-shadow: 0 0 20px #ffffff7e;
 }
-.product img{
+
+.product img {
     transition: 0.3s all ease;
 }
-.product:hover img{
+
+.product:hover img {
     transform: scale(1.2);
 }
-.product-title h2{
+
+.product-title h2 {
     color: #FFF;
-text-align: right;
-font-family: 'Comfortaa',sans-serif;
-font-size: 17px;
-font-weight: 400;
+    text-align: right;
+    font-family: 'Comfortaa', sans-serif;
+    font-size: 17px;
+    font-weight: 400;
 }
-.product-title{
+
+.product-title {
     height: 65px;
     display: flex;
     align-items: center;
     justify-content: end;
-    padding-right:10px;
+    padding-right: 10px;
     background: #95754a;
     position: relative;
     z-index: 100;
 
 }
-.product-bag{
+
+.product-bag {
     display: flex;
     align-items: center;
     width: 100%;
@@ -88,7 +99,7 @@ font-weight: 400;
 
 
 /* Modal */
-#modal{
+#modal {
     z-index: 101;
     display: block;
     position: fixed;
@@ -100,27 +111,30 @@ font-weight: 400;
     backdrop-filter: blur(15px);
     transform: scale(0);
 }
-#modal .window{
+
+#modal .window {
     display: block;
     position: absolute;
     padding: 10px;
     left: 50%;
     top: 50%;
-    transform: scaleY(0) translate(-50%,-50%);
+    transform: scaleY(0) translate(-50%, -50%);
     width: 80%;
-    height: 50%;
+    height: auto;
     background: #fff;
     border-radius: 10px;
     box-shadow: 0 0 30px #000;
     transition: 0.5s all ease;
 }
-#modal .window #modal_img{
+
+#modal .window #modal_img {
     display: block;
     width: 100%;
     height: 100%;
     transition: 0.3s transform ease;
 }
-#closeModalBtn{
+
+#closeModalBtn {
     text-shadow: 0 0 30px #000;
     display: block;
     position: fixed;
@@ -131,63 +145,73 @@ font-weight: 400;
     color: #fff;
     transition: all 0.2s ease;
 }
-#closeModalBtn:hover{
+
+#closeModalBtn:hover {
     transform: rotate(180deg) scaleY(0.85);
 }
-.tab-list{
+
+.tab-list {
     display: flex;
     border-bottom: none;
 }
 
 
 @media screen and (max-width:1420px) {
-    .katalog img{
+    .katalog img {
         width: 40%;
     }
 }
 
 @media screen and (max-width:830px) {
-    .tab-list{
+    .tab-list {
         display: flex;
         flex-wrap: wrap;
     }
 }
+
 @media screen and (max-width:1000px) {
-    .katalog img{
+    .katalog img {
         width: 30%;
     }
-    .katalog{
+
+    .katalog {
         display: flex;
         justify-content: center;
     }
 }
+
 @media screen and (max-width:500px) {
-    .katalog h2{
+    .katalog h2 {
         font-size: 25px;
     }
 }
+
 @media screen and (max-width:500px) {
-    .katalog h2{
+    .katalog h2 {
         font-size: 25px;
     }
 }
+
 @media screen and (max-width:380px) {
-    .katalog h2{
+    .katalog h2 {
         font-size: 15px;
     }
-    .katalog img{
+
+    .katalog img {
         display: none;
     }
-    .left-line{
+
+    .left-line {
         display: flex;
     }
 }
 
 @media screen and (max-width:500px) {
-    #modal .window{
+    #modal .window {
         width: 100%;
     }
-    #modal{
+
+    #modal {
         padding: 0 10px;
     }
 }
