--- a/src/Styles/Normalize.css
+++ b/src/Styles/Normalize.css
@@ -13,6 +13,7 @@ html,body{
     width: 100%;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .container{
@@ -20,6 +21,7 @@ html,body{
     max-width: 1250px;
     margin: 0 auto;
     padding: 0 30px;
+    overflow: hidden;
 }
 a{
     text-decoration: none;
